rnsc/test_data/rns_integration/error/parser/package_directive/multiple_definitions.rns
; Tests that multiple .package directives are detected and reported.
; Expected error: E-030 (multiple package definitions)
; The parser should detect the second .package as a duplicate.

.class public MyClass
.super java/lang/Object
.package com.example
.package com.other

.class_end
